# lock-comonad

./: README.md  lock-comonad.cabal
app/: Main.hs
src/: Lib.hs
